fix navbar positioning and adjust hero alignment

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-color: black;
 }
 .main{
-     padding-top: 25px; 
+     /* padding-top: 25px;  */
     background-image: url("../assets/images/image405.jpg");
     background-position: center center;
     background-size: max(200px,100vw);
@@ -18,21 +18,28 @@ body{
     position: relative;
 }
 .main .box{
-    height: 644px;
+    height: 669px;
     width: 100%;
-    opacity: 0.55;
+    opacity: 0.66;
     position: absolute;
     top:0;
     background-color:black;
 }
 
 nav{
-    max-width: 60vw;
-    margin:auto;
+    position: absolute;
+    top: 25px;
+    left: 50%;
+     transform: translateX(-50%);
+    width: 60vw;
+
+    /* max-width: 60vw; */
+    /* margin:25px auto 0 auto; */
     justify-content: space-between;
     display:flex;
     align-content:center;
-    height: 100px;
+    z-index: 10;
+    /* height: 100px; */
 }
 
 nav img{
@@ -52,6 +59,7 @@ nav button{
     display: flex;
     align-items:center;
     justify-content: center;
+    text-align: center;
     flex-direction: column;
     color: white;
     position: relative;
@@ -62,12 +70,14 @@ nav button{
     font-weight: bolder;
     font-size: 48px;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .hero> :nth-child(2) {
     font-weight: 400;
     font-size: 20px;
     text-align: center;
+      margin-bottom: 30px;
 }
 
 .hero> :nth-child(3) {
@@ -76,8 +86,33 @@ color:rgb(255, 255, 255);
     font-weight: 400;
     font-size: 16px;
     text-align: center;
+      margin-bottom: 20px;
 }
 
 #get_str_btn{
+    font-family: "Martel Sans", sans-serif, "Helvetica Neue", "Segoe UI", Roboto, Ubuntu, sans-serif;
+    font-weight: 900;
+    font-style: normal;
     background-color: rgb(255, 255, 255);
+    height: 50px;
+    width: 238px;
+    background-color: rgb(230, 9, 20);
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border: none;
+    font-size: 20px;
+}
+
+.mail_str :nth-child(1){
+     font-family: "Martel Sans", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: rgb(255, 255, 255);
+     background-color: rgba(255, 255, 255, 0.090); 
+    border: 1px solid rgba(255, 255, 255, 0.5);
+   border-radius: 5px;
+        height: 27px;
+    width: 328px;
+    padding: 12px;
 }
